--- a/style.css
+++ b/style.css
@@ -376,6 +376,31 @@ footer p{
     color: #ffffff;
 }
 
+/*CONTACT*/
+.whatsapp-float {
+    position: fixed;
+    bottom: 20px;
+    left: 20px;
+    background-color: #25D366;
+    color: white;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+    z-index: 100;
+    text-decoration: none;
+}
+
+.whatsapp-float i {
+    font-size: 30px;
+}
+
+.whatsapp-float:hover {
+    background-color: #128C7E;
+}
 
 /* RESPONSIVE STYLE*/
 @media (min-width: 769px) {
